--- a/templates/sat_host_reg/reg_args.j2
+++ b/templates/sat_host_reg/reg_args.j2
@@ -1,8 +1,8 @@
 {
-  "organization_id": {{ organizations_resource_info_result.resources | selectattr('name', 'search', organization) | map(attribute='id') }},
-  "location_id": {{ locations_resource_info_result.resources | selectattr('name', 'search', location) | map(attribute='id') }},
+  "organization_id": {{ organizations_resource_info_result.resources | selectattr('name', 'search', organization) | map(attribute='id') | list | first }},
+  "location_id": {{ locations_resource_info_result.resources | selectattr('name', 'search', location) | map(attribute='id') | list | first }},
   "registration_command": {
-    "smart_proxy_id": {{ capsules_resource_info_result.resources | selectattr('name', 'search', '^satellite') | map(attribute='id') }},
+    "smart_proxy_id": {{ capsules_resource_info_result.resources | selectattr('name', 'search', '^satellite') | map(attribute='id') | list | first }},
     "setup_insights": {{ setup_insights | default(false) }},
     "setup_remote_execution": {{ setup_remote_execution | default(false) }},
     "insecure": {{ lookup('env', 'SATELLITE_VALIDATE_CERTS') | default(true) }},
